# GIFPlayer

./: .gitignore  .npmignore  GifPlayer.js  LICENSE  README.md  fontello.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
examples/: controller.html  gui.html  index.html  scroller.html
player/: GIFPlayerV2.js  GifPlayer.js
player/exports/: Loader.js
src/: GIFPlayerV2.js
src/css/: fontello.css  gui.css  gui2.css  gui2.css.map  gui2.scss
src/exports/: Defaults.js  Loader.js  Player.js  PluginsController.js  Throttling.js  Validator.js
src/exports/parser/: .npmignore  Cargo.toml
src/exports/plugins/: Controller.js  GUI.js  Scroller.js
src/font/: fontello.eot
src/js/exports/: Defaults.js  Loader.js  Player.js  PluginsController.js  Throttling.js
src/js/exports/parser/: .gitignore
src/js/exports/parser/src/: lib.rs
src/js/exports/plugins/: GUI.js  GUI2.js  Scroller.js
