[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3.60"
features = ["Blob", "Url", "console"]


